syntax = "proto3";

package danske_bank;

option java_package = "dk.rohdef.danske_bank";
option java_multiple_files = true;

service CakeFactory {
  rpc GetCakeOffers(CakeRequest) returns (stream CakeResponse) {}
}

message CakeRequest {
  string requester = 1;
}

message CakeResponse {
  string factory = 1;
  repeated Cake cakes = 2;
}

message Cake {
  string name = 1;
  int32 price = 2;
}